fix address overflow

--- a/html/styles/address.less
+++ b/html/styles/address.less
@@ -161,7 +161,8 @@
                 }
                 .address-bar {
                     // padding: 0px 44px;
-                    background: #ffffff;
+                    background: #ffffff url('../img/bg_txArrow@2x.png') no-repeat;
+                    background-size: 50% 100%;
                     .qr {
                         width:70px;
                         height:70px;
@@ -180,11 +181,12 @@
                             display: inline-block;
                             padding-left: 20px;
                             color:rgba(113,124,136,1);
-                            // width: 60%;
+                            width: 80%;
                             line-height:24px;
                             word-wrap: break-word;
-                            position: absolute;
+                            // position: absolute;
                             // width: 246px ;
+                            vertical-align: top;
                             b {
                                 font-family:MoskMedium500;
                                 font-size:15px;
@@ -198,8 +200,6 @@
                     }
                     .item-a {
                         width: 50%;
-                        background: url('../img/bg_txArrow@2x.png') no-repeat;
-                        background-size: 100% 100%;
                         min-width: 379px;
                     }
                     .item-b {
@@ -284,6 +284,7 @@
                 }
             }
             .address-bar{
+                background: #fff;
                 .item-b,
                 .item-a{
                     width: 100%;
@@ -291,7 +292,7 @@
                     padding-left: 12px;
                     span{
                         min-width: auto;
-                        width: 230px;
+                        // width: 230px;
                     }
                 }
                 .item-a {
